<?xml version="1.0"?>
<package format="3">
  <name>bumper_bot</name>
  <version>0.0.0</version>
  <description>Contact-Based Local Mapping Node</description>
  <maintainer email="modini@example.com">modini</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

